--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>GoBarber</title>
+    <title>Fideliza</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap"
